--- a/style.css
+++ b/style.css
@@ -1,8 +1,119 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    font-family: 'Raleway', sans-serif;
+}
+
+body {
+    background-color: rgb(241, 238, 238);
+    color: rgb(20, 20, 20);
+}
 
 
+header {
+    /*
+    background-color: rgb(248, 248, 248); /* ta bort */
+    
+    align-items: center;
+    width: 100%;
+    height: 5rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;    
+}
+
+main {
+    /*
+    background-color: honeydew; /*ta bort*/
+    height: 100vh;
+    padding-top: 10rem;
+    
+}
 
 
+/* Återanvändbara */
 
+.flex {
+    display: flex;
+}
+
+.column {
+    flex-direction: column;
+}
+
+
+/* header klasser */
+
+nav ul li {
+    justify-content: flex-end; 
+    
+}
+
+.fas.fa-ellipsis-v {
+
+    display: none ;
+    margin-top: 1rem;
+    color: rgb(41, 40, 40);
+    font-size: 2rem;
+  }
+
+.margin {
+    margin: 1.5rem;
+}
+.space {
+    justify-content: flex-end;
+}
+
+.fonts {
+    font-size: 2rem;
+}
+
+.list {
+    list-style-type: none;
+}
+
+.width {
+    width: 100%;
+}
+.paddingHeader {
+    padding: 1rem;
+}
+.marginRight {
+    margin-right: 0;
+}
+
+.skanor img {
+    width: 35rem;
+    height: 25rem;
+    object-fit: cover;
+}
+
+.nav-links {
+    text-decoration: none;
+    color: rgb(20, 20, 20);
+}
+
+.centerImageMain {
+    justify-content: center;
+}
+
+/* MAIN KLASSER */
+
+.mainCenterWidth {
+    
+    justify-content: center;
+    text-align: center;
+}
 
 /* SE TILL ATT SIDAN ÄR RESPONSIV! */
-@media 
+@media (max-width: 800px) {
+   
+    .fas.fa-ellipsis-v {
+        display: unset;
+    }
+
+    nav ul li {
+        display: none;
+    }
+}
