--- a/style.css
+++ b/style.css
@@ -2,16 +2,18 @@
     box-sizing: border-box;
     margin: 0;
     font-family: 'Raleway', sans-serif;
+    
 }
 
 body {
-    background-color: rgb(241, 238, 238);
+    background-color: rgb(248, 248, 248);
+    /*background-color: rgb(241, 238, 238);*/
     color: rgb(20, 20, 20);
 }
 
 
 header {
-    background-color: rgb(241, 238, 238);
+    background-color: rgb(248, 248, 248);
     align-items: center;
     width: 100%;
     height: 4rem;
@@ -20,16 +22,22 @@ header {
     left: 0;
     right: 0;    
     overflow-y: hidden;
+    z-index: 1;
+    
 }
 
 main {
-    /*
-    background-color: honeydew; /*ta bort*/
     width: 100%;
     height: 300vh;
-    padding-top: 5rem; 
+    padding-top: 9rem; 
 }
 
+a:hover {
+    font-size: 1.2rem;
+    letter-spacing: 0.1rem;
+    color: black;
+    
+}
 
 /* Återanvändbara */
 
@@ -51,18 +59,16 @@ main {
 
 
 /* header klasser */
-.menu {
-    
+.menu { 
     display: none;
     height: 40rem;
-   
-    
 }
+
 
 nav ul li {
     justify-content: flex-end; 
-    
 }
+
 .margin {
     margin: 1rem;
 }
@@ -106,20 +112,20 @@ nav ul li {
 
 .fas.fa-ellipsis-v {
     color: rgb(41, 40, 40);
-    font-size: 2rem;
-   
-   
-    
+    font-size: 2rem;    
 }
+
 .hideThis{
     overflow-y: hidden;
 }
-.iconMarginBottom {
-    margin-bottom: 3rem;
-}
+
 .drop-links {
     text-decoration: none;
     color: rgb(20, 20, 20);
+}
+
+.iconHide {
+    display: none;
 }
 
 
@@ -127,18 +133,17 @@ nav ul li {
 
 .imgTop {
     width: 80%;
+    height: auto;    
+}
+
+.myPhotos {
+    width: 20%;
     height: auto;
-    margin-top: 8rem;
+    padding: 0.2rem;
 }
 
 .mainWidth {
     width: 50%;
-}
-
-.mainCenterWidth {
-    
-    justify-content: center;
-    text-align: center;
 }
 
 .mainPaddingTop {
@@ -149,6 +154,9 @@ nav ul li {
 
 @media (max-width: 927px) {
    
+    .iconHide {
+        display: unset;
+    }
     .fas.fa-ellipsis-v {
         display: unset;
     }
@@ -158,6 +166,11 @@ nav ul li {
     nav ul li {
         display: none;
     }
+    .myName {
+        display: flex;
+        margin-left: 20rem;
+    }
+  
 
 }
 
@@ -171,9 +184,7 @@ nav ul li {
     nav ul li {
         display: none;
     }
-    h4 {
-        font-size: 1.8rem;
-    }
+    
 }
 
 
@@ -187,7 +198,5 @@ nav ul li {
     nav ul li {
         display: none;
     }
-    h4 {
-        font-size: 1rem;
-    }
+    
 }
