--- a/style.css
+++ b/style.css
@@ -2,15 +2,12 @@
     box-sizing: border-box;
     margin: 0;
     font-family: 'Raleway', sans-serif;
-    
 }
 
 body {
     background-color: rgb(248, 248, 248);
-    /*background-color: rgb(241, 238, 238);*/
     color: rgb(20, 20, 20);
 }
-
 
 header {
     background-color: rgb(248, 248, 248);
@@ -23,23 +20,20 @@ header {
     right: 0;    
     overflow-y: hidden;
     z-index: 1;
-    
 }
 
 main {
     width: 100%;
     height: 300vh;
-    padding-top: 9rem; 
+    padding-top: 9rem;   
 }
 
 a:hover {
-    font-size: 1.2rem;
     letter-spacing: 0.1rem;
-    color: black;
-    
+    color: rgb(153, 153, 153);   
 }
 
-/* Återanvändbara */
+/* REUSABLE */
 
 .flex {
     display: flex;
@@ -48,22 +42,32 @@ a:hover {
 .column {
     flex-direction: column;
 }
+
+.row {
+    flex-direction: row;
+}
+
 .center {
     justify-items: center;
     justify-content: center;
     align-items: center;
 }
+
 .list {
     list-style-type: none;
 }
 
+.marginBottom {
+    margin-bottom: 1rem;
+}
 
-/* header klasser */
+
+/* HEADER CLASSES */
+
 .menu { 
     display: none;
     height: 40rem;
 }
-
 
 nav ul li {
     justify-content: flex-end; 
@@ -72,8 +76,13 @@ nav ul li {
 .margin {
     margin: 1rem;
 }
-.space {
+
+.headerFlexEnd {
     justify-content: flex-end;
+}
+
+.headerFlexStart {
+    justify-content: flex-start;
 }
 
 .fonts {
@@ -87,6 +96,7 @@ nav ul li {
 .width {
     width: 100%;
 }
+
 .paddingUl{
     padding: 0;
 }
@@ -94,6 +104,7 @@ nav ul li {
 .paddingHeader {
     padding: 1rem;
 }
+
 .marginRight {
     margin-right: 0;
 }
@@ -129,7 +140,7 @@ nav ul li {
 }
 
 
-/* MAIN KLASSER */
+/* MAIN CLASSES */
 
 .imgTop {
     width: 80%;
@@ -137,9 +148,16 @@ nav ul li {
 }
 
 .myPhotos {
-    width: 20%;
-    height: auto;
-    padding: 0.2rem;
+    width: 25%;
+    height: auto;    
+}
+
+.marginPhotos {
+    margin-right: 6.5rem;
+}
+
+.marginPhotosTop {
+    margin-top: 6.5rem;
 }
 
 .mainWidth {
@@ -150,7 +168,14 @@ nav ul li {
     padding-top: 9rem;
 }
 
-/* SE TILL ATT SIDAN ÄR RESPONSIV! */
+.far.fa-envelope{
+    font-size: 1.3rem;
+    padding-right: 0.4rem;
+}
+
+
+
+/* MEDIAQUERY */
 
 @media (max-width: 927px) {
    
@@ -168,7 +193,7 @@ nav ul li {
     }
     .myName {
         display: flex;
-        margin-left: 20rem;
+        justify-content: flex-end;
     }
   
 
@@ -184,6 +209,7 @@ nav ul li {
     nav ul li {
         display: none;
     }
+
     
 }
 
@@ -197,6 +223,9 @@ nav ul li {
     }
     nav ul li {
         display: none;
+    }
+    .myName {
+        font-size: 1.5rem;
     }
     
 }
